# free-games-homeassistant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING-auto.yml  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  release.yml  validate.yml
custom_components/free_games/: __init__.py  api.py  calendar.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  event.py  icons.json  manifest.json  sensor.py  strings.json
custom_components/free_games/translations/: en.json
tests/: conftest.py  test_api.py  test_calendar.py  test_config_flow.py  test_const.py  test_coordinator.py  test_diagnostics.py  test_event.py  test_init.py  test_platform_registration.py  test_sensor.py  test_translations.py
tests/fixtures/: malformed.xml  sample_consolidated_feed.xml  sample_game_feed.xml  sample_loot_feed.xml
