[project]
name = "free-games-homeassistant"
version = "1.0.1"
requires-python = ">=3.13,<3.14"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-homeassistant-custom-component>=0.13.0",
    "ruff>=0.9.0",
    "josepy<3.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "ty>=0.0.59",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
log_cli = false

[tool.ruff]
target-version = "py312"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
blanket-ignore-comment = "error"
